--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hola Aqui Estamos</h1>  
+  <h1>Hola Aqui Estamos</h1> 
+  <h2>Prueba Dos
+    
+  </h2> 
 </body>
 </html>
