--- a/front/index.html
+++ b/front/index.html
@@ -18,7 +18,7 @@
       src="https://kit.fontawesome.com/1670a54862.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <title>El Predio | Fútbol</title>
   </head>
   <body>
     <div id="root"></div>
